♻️ Refactor normalization method in AnswerRelevanceLlmEvaluator and ContextRelevanceLlmEvaluator to use Math.clamp for improved clarity